[gd_scene load_steps=10 format=3 uid="uid://dan5iblvyp87s"]

[ext_resource type="Texture2D" uid="uid://byiv7gx4e8g5q" path="res://assets/art/background/backgroundV2.png" id="1_mqu0n"]
[ext_resource type="Script" path="res://scripts/Arena.gd" id="3_hb3lt"]
[ext_resource type="PackedScene" uid="uid://cipdvjdamv1gv" path="res://scenes/entity/Crowd/CrowdHandler.tscn" id="4_8hy5o"]
[ext_resource type="PackedScene" uid="uid://cdfuwisuud2q1" path="res://scenes/player1.tscn" id="4_gdias"]
[ext_resource type="PackedScene" uid="uid://cack3kykwsqny" path="res://scenes/player2.tscn" id="5_3ccnj"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_oukdq"]
radius = 272.92
height = 807.88

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ald5m"]
radius = 224.47
height = 662.29

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_r6vxw"]
radius = 155.3
height = 527.63

[sub_resource type="SegmentShape2D" id="SegmentShape2D_yu5ia"]
a = Vector2(0, -28)
b = Vector2(0, 38)

[node name="multi" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="Background" type="Sprite2D" parent="."]
z_index = -30
position = Vector2(574.5, 324)
scale = Vector2(1.046, 0.603)
texture = ExtResource("1_mqu0n")

[node name="Arena" type="Area2D" parent="."]
position = Vector2(578, 323)
script = ExtResource("3_hb3lt")

[node name="ArenaBig" type="CollisionShape2D" parent="Arena"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_oukdq")
debug_color = Color(0.8, 0.537255, 0, 0.419608)

[node name="ArenaMedium" type="CollisionShape2D" parent="Arena"]
visible = false
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ald5m")
debug_color = Color(0.964706, 0.262745, 0.741176, 0.419608)

[node name="ArenaSmall" type="CollisionShape2D" parent="Arena"]
visible = false
rotation = 1.5708
shape = SubResource("CapsuleShape2D_r6vxw")
debug_color = Color(1, 0.0941176, 0.0627451, 0.419608)

[node name="CrowdHandler" parent="Arena" instance=ExtResource("4_8hy5o")]

[node name="Targets" type="Node2D" parent="Arena"]

[node name="positionPlayer" type="Node2D" parent="Arena/Targets"]
position = Vector2(-209, 0)

[node name="positionEnemy" type="Node2D" parent="Arena/Targets"]
position = Vector2(198, 0)

[node name="enemyInPositionDetector" type="Area2D" parent="Arena/Targets/positionEnemy"]

[node name="Collider" type="CollisionShape2D" parent="Arena/Targets/positionEnemy/enemyInPositionDetector"]
position = Vector2(44, -6)
shape = SubResource("SegmentShape2D_yu5ia")

[node name="spawnEnemy" type="Node2D" parent="Arena/Targets"]
position = Vector2(938, 0)

[node name="Player1" parent="." instance=ExtResource("4_gdias")]
position = Vector2(368, 324)

[node name="Player2" parent="." instance=ExtResource("5_3ccnj")]
position = Vector2(775, 323)
